--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -3,35 +3,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/beige">
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/name_label"/>
+        android:text="@string/name_label"
+        android:textColor="@color/brown"/>
 
     <EditText
         android:id="@+id/task_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/name_hint"/>
+        android:hint="@string/name_hint"
+        android:textColor="@color/brown"/>
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/details_label"/>
+        android:text="@string/details_label"
+        android:textColor="@color/brown"/>
 
-    <Button
+    <EditText
         android:id="@+id/task_date"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusableInTouchMode="false"
+        android:autofillHints=""
+        android:inputType="date"
+        style="@style/TextAppearance2"/>
+
+    <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/brown"/>
 
     <CheckBox
         android:id="@+id/task_done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/done_label"/>
+        android:text="@string/done_label" />
 
 </LinearLayout>
