--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,20 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="TextAppearance1">
+        <item name="android:background">@color/beige</item>
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+    <style name="TextAppearance2">
+        <item name="android:background">@color/beige</item>
+        <item name="android:textColor">@color/brown</item>
+        <item name="android:focusable">false</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="Theme.Zad3" parent="Base.Theme.Zad3" />
 </resources>
